FIX [14]: search button width on tablet
was result of social icons aligned center

--- a/sass/partials/_styles.scss
+++ b/sass/partials/_styles.scss
@@ -572,6 +572,9 @@ background:transparent url('img/striped-bg.png');
   .social {
     margin-top:.6em;
     text-align:center;
+    @include respond-to(tablet) {
+      text-align:left;
+    }
     img {
       padding:0 .2em;
     }
